# bioinformatics-implementations

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
algorithms/smith_waterman/: README.md  cpu_sw_create_scoring_matrix.cpp  cpu_sw_create_scoring_matrix.h  cuda_sw_create_scoring_matrix.cu  cuda_sw_create_scoring_matrix.h  smith_waterman.cpp  smith_waterman.h
algorithms/smith_waterman/cuda/: smith_waterman.cu
data_exploration/: README.md  main.cpp  main.py
include/bioinformatics-pipeline/: cpu_hamming_distance.h  cpu_needleman_wunsch.h  cpu_nw_create_scoring_matrix.h  cpu_smith_waterman.h  cuda_hamming_distance.h  cuda_needleman_wunsch.h  cuda_smith_waterman.h  cuda_sw_create_scoring_matrix.h  hamming_distance.h  needleman_wunsch.h  smith_waterman.h
pipeline/: README.md  pipeline.cpp
smith_waterman/: README.md  naive_implementation.cpp  smith_waterman.cpp  smith_waterman.h
src/algorithms/hamming_distance/: README.md  cpu_hamming_distance.cpp  cuda_hamming_distance.cu  hamming_distance.cpp
src/algorithms/needleman_wunsch/: cpu_needleman_wunsch.cpp  cpu_nw_create_scoring_matrix.cpp  cuda_needleman_wunsch.cu  needleman_wunsch.cpp
src/algorithms/smith_waterman/: README.md  cpu_smith_waterman.cpp  cpu_sw_create_scoring_matrix.cpp  cuda_smith_waterman.cu  cuda_sw_create_scoring_matrix.cu  smith_waterman.cpp
src/pipeline/: README.md  kaggle_pipeline.cpp  pipeline.cpp
tests/: README.md  hd_test.cpp  nw_test.cpp  smith_waterman_test.cpp  sw_test.cpp
utils/: utils.cpp  utils.h
